# xfersat-cv-project

./: .gitignore  LICENSE  README.md  main.py  pyproject.toml  requirements.txt  run.py
notebooks/: 01_exploratory_analysis.ipynb  02_data_preparation.ipynb  03_model_development.ipynb  04_evaluation_visualization.ipynb  05_backbone_comparison.ipynb  06_results_comparison.ipynb  07_progressive_unfreezing.ipynb
src/data/: dataset.py  make_dataset.py
src/models/: model.py  train.py
src/visualization/: visualize.py
tests/: test_dataset.py  test_model.py  test_visualization.py
